# urban-hazard-maps

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  lefthook.yml  pipeline.py
.github/: trufflehog-excludes.txt
.github/workflows/: pr.yml  update.yml
backend/: Dockerfile  pyproject.toml
backend/src/boston_needle_map/: __init__.py  analytics.py  api.py  cache.py  cleaner.py  cli.py  config.py  fetcher.py  models.py
backend/tests/: test_models.py
data-experiments/: pyproject.toml
data-experiments/research/encampment-reclassification/: README.md  monthly_volume.json  raw_closure_texts.txt
data-experiments/research/open311-other/: FINDINGS.md  analysis_output.txt  analyze.py  fetch.py  summary.json
data-experiments/src/data_experiments/: classifier.py  cli.py  config.py  enricher.py  experiment.py  fetcher.py
docs/: index.html  open311-service-codes.md
docs/architectural-decisions/: 001-human-waste-data-pipeline.md  002-simplified-architecture.md
docs/wiki/: INDEX.md  data-quality-issues.md  open311-api-reference.md  other-ticket-analysis.md  reporting-patterns.md  service-code-mapping.md  sharps-team-analysis.md  ticket-routing.md
frontend/: .env.example  Dockerfile  astro.config.mjs  biome.json  package.json  pnpm-lock.yaml
frontend/public/: robots.txt
frontend/public/fonts/: source-sans-3.css
frontend/src/: middleware.ts
frontend/src/components/: Footer.astro  Header.astro  HeatMap.tsx  HourlyChart.tsx  MonthlyTrend.tsx  NeighborhoodTable.astro  NeighborhoodTable.tsx  PersonnelAvailabilityChip.tsx  StatsOverview.astro  ZipCodeList.astro  ZipCodeList.tsx
frontend/src/data/: personnel-availability.json
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: api.ts  bucket.ts  filterStore.ts  heat-curves.ts  seo.ts  types.ts
frontend/src/pages/: data-quality.astro  fix.astro  index.astro  methodology.astro  sitemap-0.xml.ts  sitemap-index.xml.ts
frontend/src/pages/neighborhoods/: [slug].astro
frontend/src/styles/: global.css
pipeline/: .env.example  Dockerfile  pyproject.toml
pipeline/src/pipeline/: __init__.py  analytics.py  classifier.py  cleaner.py  cli.py  config.py  districts.py  enricher.py  fetcher.py  models.py  open311_loader.py  run.py  storage.py
pipeline/tests/: conftest.py  test_storage.py  test_waste_merge.py
scripts/orchestrator/: README.md  codex_audit.py  dispatch.py  kimi_client.py  reaudit.py  scrub.py  tickets.yml  verify.py  worktree.py
scripts/orchestrator/tests/: test_dispatch.py  test_scrub.py
services/open311-scraper/: Dockerfile  README.md  compare.py  comparison_report.json  fetch.py
src/boston_needle_map/: app.py
templates/: dashboard.html
