[project]
name = "data-experiments"
version = "0.1.0"
description = "NLP experiments for detecting human waste reports in Boston 311 data"
requires-python = ">=3.12"
dependencies = [
    "spacy>=3.8.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
]

[project.scripts]
data-experiments = "data_experiments.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_experiments"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
